[FIX] line should break if url link is too long for readonly etherpad
bzr revid: rgaopenerp-20130701095502-c6pgr2dz7i7zmdop

--- a/addons/pad/static/src/css/etherpad.css
+++ b/addons/pad/static/src/css/etherpad.css
@@ -92,6 +92,8 @@
     font-family: arial, sans-serif;
     font-size: 15px;
     line-height: 19px; 
+    word-wrap: break-word;
+    max-width: 750px;
 }
 
 .openerp .oe_form_nomargin .etherpad_readonly{ 
